# novelcraft-author-os

./: .gitattributes  .gitignore  CLAUDE.md  CODE_WIKI.md  CONTRIBUTING.md  DAILY_REPORT_2026-06-08.md  DEVELOPER_GUIDE.md  LICENSE  PRD.md  README.md  REFERENCE_ANALYSIS.md  SKILLS_REFERENCE.md  SPRINT_D_REPORT.md  UI_INTEGRATION_TEST.md  UI_ISSUES_INVESTIGATION.md  findings.md  progress.md  task_plan.md
.github/: FUNDING.yml  REPOSITORY_INFO.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-06-author-os-sprint-a-f.md
docs/superpowers/specs/: 2026-06-03-author-assistant-knowledge-base-design.md
novel-app/: .gitignore  HANDOVER.md  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
novel-app/src/: App.tsx  design-system.css  index.css  main.tsx
novel-app/src-tauri/: Cargo.toml  tauri.conf.json
novel-app/src-tauri/capabilities/: default.json
novel-app/src-tauri/icons/: icon.icns
novel-app/src-tauri/src/: author_os.rs  db.rs  knowledge.rs  lib.rs  llm.rs  logger.rs  main.rs  secret.rs
novel-app/src/app/components/: AppLayout.tsx  BottomBar.tsx  RightPanel.tsx  Sidebar.tsx  TopBar.tsx
novel-app/src/core/ai-engine/: anti-hallucination.ts  context-budget.ts  context-builder.test.ts  context-builder.ts  index.ts  model-router.ts  provider-presets.ts  providers.test.ts  providers.ts  read-guidance.ts  resilience.test.ts  resilience.ts  style-guard.test.ts  style-guard.ts
novel-app/src/core/db/: repository.ts  (+11 more)
novel-app/src/modules/: index.ts
交接计划/: 批次文档.md
(+182 files in other folders)
