[package]
name = "novel-app"
version = "0.1.0"
description = "NovelCraft — AI-Powered Novel Writing Platform"
authors = ["NovelCraft Team"]
edition = "2021"

[lib]
name = "novel_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
